--- a/index.html
+++ b/index.html
@@ -4,228 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Time Distribution Tool</title>
-    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.0.0/d3.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div id="root"></div>
 
+    <script src="utils.js"></script>
+    <script type="text/babel" src="TimeDistributionTool.js"></script>
     <script type="text/babel">
-        const TimeDistributionTool = () => {
-            const [startTime, setStartTime] = React.useState('18:13');
-            const [endTime, setEndTime] = React.useState('07:35');
-            const [totalMinutes, setTotalMinutes] = React.useState(0);
-            const [events, setEvents] = React.useState([
-                { name: 'Work', duration: 0, color: '#FF6B6B' },
-                { name: 'Freshen up', duration: 0, color: '#4ECDC4' },
-                { name: 'Meditate', duration: 0, color: '#45B7D1' },
-                { name: 'Buffer', duration: 0, color: '#FFA07A' }
-            ]);
-            const [newEventName, setNewEventName] = React.useState('');
-            const [deletedEvents, setDeletedEvents] = React.useState([]);
-
-            React.useEffect(() => {
-                calculateTotalMinutes();
-            }, [startTime, endTime]);
-
-            React.useEffect(() => {
-                updateChart();
-            }, [events, totalMinutes]);
-
-            const calculateTotalMinutes = () => {
-                const start = new Date(`2000-01-01T${startTime}`);
-                const end = new Date(`2000-01-02T${endTime}`);
-                const diff = (end - start) / 60000;
-                setTotalMinutes(diff);
-            };
-
-            const updateChart = () => {
-                d3.select('#chart').selectAll('*').remove();
-
-                const svg = d3.select('#chart')
-                    .attr('width', 400)
-                    .attr('height', 400)
-                    .append('g')
-                    .attr('transform', 'translate(200,200)');
-
-                const pie = d3.pie().value(d => d.duration).sort(null);
-                const arc = d3.arc().innerRadius(100).outerRadius(200);
-
-                const arcs = svg.selectAll('arc')
-                    .data(pie(events))
-                    .enter()
-                    .append('g');
-
-                arcs.append('path')
-                    .attr('d', arc)
-                    .attr('fill', d => d.data.color)
-                    .attr('stroke', 'white')
-                    .style('stroke-width', '2px')
-                    .style('opacity', 0.7);
-
-                arcs.append('text')
-                    .attr('transform', d => `translate(${arc.centroid(d)})`)
-                    .attr('text-anchor', 'middle')
-                    .attr('font-size', '14px')
-                    .attr('fill', 'white')
-                    .text(d => `${Math.round(d.data.duration / totalMinutes * 100)}%`);
-            };
-
-            const handleDurationChange = (index, newDuration) => {
-                const newEvents = [...events];
-                newEvents[index].duration = parseInt(newDuration);
-                setEvents(newEvents);
-            };
-
-            const addNewEvent = () => {
-                if (newEventName) {
-                    setEvents([...events, { 
-                        name: newEventName, 
-                        duration: 0, 
-                        color: `#${Math.floor(Math.random()*16777215).toString(16)}`
-                    }]);
-                    setNewEventName('');
-                }
-            };
-
-            const deleteEvent = (index) => {
-                const eventToDelete = events[index];
-                setDeletedEvents([...deletedEvents, eventToDelete]);
-                setEvents(events.filter((_, i) => i !== index));
-            };
-
-            const undoDelete = () => {
-                const lastDeleted = deletedEvents.pop();
-                if (lastDeleted) {
-                    setEvents([...events, lastDeleted]);
-                    setDeletedEvents([...deletedEvents]);
-                }
-            };
-
-            const reorderEvents = (index, direction) => {
-                const newEvents = [...events];
-                const targetIndex = direction === 'up' ? index - 1 : index + 1;
-                if (targetIndex >= 0 && targetIndex < events.length) {
-                    const temp = newEvents[targetIndex];
-                    newEvents[targetIndex] = newEvents[index];
-                    newEvents[index] = temp;
-                    setEvents(newEvents);
-                }
-            };
-
-            const formatDateTime = (timeString) => {
-                const now = new Date();
-                const date = now.toLocaleDateString();
-                const time = timeString + ':00';
-                return `${date} ${time}`;
-            };
-
-            const generateTimeTable = () => {
-                let currentTime = new Date(`2000-01-01T${startTime}`);
-                return events.map(event => {
-                    const startTimeStr = currentTime.toTimeString().slice(0, 8);
-                    currentTime = new Date(currentTime.getTime() + event.duration * 60000);
-                    const endTimeStr = currentTime.toTimeString().slice(0, 8);
-                    return {
-                        date: new Date().toLocaleDateString(),
-                        task: event.name,
-                        duration: `${Math.floor(event.duration / 60)}:${(event.duration % 60).toString().padStart(2, '0')}:00`,
-                        startTime: formatDateTime(startTimeStr),
-                        endTime: formatDateTime(endTimeStr)
-                    };
-                });
-            };
-
-            return (
-                <div className="container mx-auto p-8 bg-gray-100 rounded-lg shadow-lg">
-                    <h1 className="text-3xl font-bold mb-6 text-center text-gray-800">Enhanced Time Distribution Tool</h1>
-                    
-                    <div className="mb-4 flex justify-between">
-                        <div>
-                            <label className="block text-sm font-medium text-gray-700">Start Time:</label>
-                            <input type="time" value={startTime} onChange={(e) => setStartTime(e.target.value)} className="mt-1 block w-full rounded-md border-gray-300 shadow-sm" />
-                        </div>
-                        <div>
-                            <label className="block text-sm font-medium text-gray-700">End Time:</label>
-                            <input type="time" value={endTime} onChange={(e) => setEndTime(e.target.value)} className="mt-1 block w-full rounded-md border-gray-300 shadow-sm" />
-                        </div>
-                    </div>
-
-                    <div className="flex justify-center mb-8">
-                        <svg id="chart"></svg>
-                    </div>
-
-                    <div className="mb-4">
-                        <input 
-                            type="text" 
-                            value={newEventName} 
-                            onChange={(e) => setNewEventName(e.target.value)} 
-                            placeholder="New event name" 
-                            className="mr-2 p-2 border rounded"
-                        />
-                        <button onClick={addNewEvent} className="bg-blue-500 text-white p-2 rounded">Add Event</button>
-                        <button onClick={undoDelete} className="bg-gray-500 text-white p-2 rounded ml-2">Undo Delete</button>
-                    </div>
-
-                    <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        {events.map((item, index) => (
-                            <div key={item.name} className="bg-white p-4 rounded-md shadow">
-                                <label className="block text-lg font-semibold mb-2 text-gray-700">{item.name}</label>
-                                <input
-                                    type="range"
-                                    min="0"
-                                    max={totalMinutes}
-                                    value={item.duration}
-                                    onChange={(e) => handleDurationChange(index, e.target.value)}
-                                    className="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
-                                />
-                                <div className="flex justify-between mt-2 text-sm text-gray-600">
-                                    <span>{item.duration} minutes</span>
-                                    <span>{Math.round(item.duration / totalMinutes * 100)}%</span>
-                                </div>
-                                <div className="flex justify-between mt-4">
-                                    <button onClick={() => reorderEvents(index, 'up')} className="bg-green-500 text-white p-2 rounded">Move Up</button>
-                                    <button onClick={() => reorderEvents(index, 'down')} className="bg-yellow-500 text-white p-2 rounded">Move Down</button>
-                                    <button onClick={() => deleteEvent(index)} className="bg-red-500 text-white p-2 rounded">Delete</button>
-                                </div>
-                            </div>
-                        ))}
-                    </div>
-
-                    <p className="mt-8 text-center text-lg font-semibold text-gray-700">Total time: {totalMinutes} minutes</p>
-
-                    <div className="mt-8">
-                        <h2 className="text-2xl font-bold mb-4">Time Table</h2>
-                        <table className="min-w-full bg-white">
-                            <thead>
-                                <tr>
-                                    <th className="py-2 px-4 border-b">Date</th>
-                                    <th className="py-2 px-4 border-b">Task</th>
-                                    <th className="py-2 px-4 border-b">Duration</th>
-                                    <th className="py-2 px-4 border-b">Start Time</th>
-                                    <th className="py-2 px-4 border-b">End Time</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {generateTimeTable().map((row, index) => (
-                                    <tr key={index}>
-                                        <td className="py-2 px-4 border-b">{row.date}</td>
-                                        <td className="py-2 px-4 border-b">{row.task}</td>
-                                        <td className="py-2 px-4 border-b">{row.duration}</td>
-                                        <td className="py-2 px-4 border-b">{row.startTime}</td>
-                                        <td className="py-2 px-4 border-b">{row.endTime}</td>
-                                    </tr>
-                                ))}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            );
-        };
-
         ReactDOM.render(<TimeDistributionTool />, document.getElementById('root'));
     </script>
 </body>
